single-control-plane-multitenancy/red-zone/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
      - "red-a/*"
      - "red-b/*"
      - "istio-system/*"
