single-control-plane-multitenancy/red-zone/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-zone
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["red-a", "red-b"]
